--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "name": "cmsn-noble",
   "description": "A Node.js BLE (Bluetooth Low Energy) central library.",
-  "version": "3.0.8",
+  "version": "3.1.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/Yongle-Fu/noble.git"
@@ -31,7 +31,7 @@
   "main": "./index.js",
   "types": "./index.d.ts",
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "os": [
     "darwin",
@@ -43,10 +43,9 @@
     "bindings": "^1.5.0",
     "debug": "^4.3.2",
     "napi-thread-safe-callback": "0.0.6",
-    "node-addon-api": "^3.2.1"
+    "node-addon-api": "^4.2.0"
   },
   "devDependencies": {
-    "node-gyp": "^8.1.0",
     "@mapbox/node-pre-gyp": "^1.0.5",
     "@mathquis/node-pre-gyp-github": "^1.0.1",
     "async": "^3.2.0",
@@ -59,6 +58,7 @@
     "eslint-plugin-standard": "^5.0.0",
     "install": "^0.13.0",
     "mocha": "^8.4.0",
+    "node-gyp": "^8.4.0",
     "prettier": "^2.3.0",
     "proxyquire": "^2.1.3",
     "request": "^2.88.2",
@@ -68,7 +68,7 @@
     "ws": "^7.4.6"
   },
   "optionalDependencies": {
-    "cmsn-bluetooth-hci-socket": "^0.6.0"
+    "cmsn-bluetooth-hci-socket": "0.6.2"
   },
   "scripts": {
     "build": "node-gyp configure && node-gyp build",
@@ -77,7 +77,7 @@
     "package-prebuilt": "node-pre-gyp package",
     "pack-all": "node scripts/pack-all.js",
     "fetch-prebuilt": "node-pre-gyp install --fallback-to-build=false",
-    "install": "npm run fetch-prebuilt || node scripts/build.js",
+    "install": "npm run fetch-prebuilt || npm run build",
     "lint": "eslint \"**/*.js\"",
     "lint-fix": "eslint \"**/*.js\" --fix",
     "test": "mocha -R spec test/*.js"
