--- a/package.json
+++ b/package.json
@@ -1,88 +1,71 @@
 {
-  "author": "Sandeep Mistry",
-  "maintainers": [
-    "Jacob Rosenthal",
-    "Luis Montes"
-  ],
-  "license": "MIT",
-  "name": "cmsn-noble",
-  "description": "A Node.js BLE (Bluetooth Low Energy) central library.",
-  "version": "3.1.6",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Yongle-Fu/noble.git"
-  },
-  "binary": {
-    "module_name": "noble",
-    "module_path": "./build/Release",
-    "host": "https://focus-resource.oss-cn-beijing.aliyuncs.com/universal/node-prebuild/{module_name}/",
-    "remote_path": "v{version}"
-  },
-  "keywords": [
-    "bluetooth",
-    "BLE",
-    "bluetooth low energy",
-    "bluetooth smart",
-    "central",
-    "winrt ble",
-    "node-ble",
-    "noble"
-  ],
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "engines": {
-    "node": ">=12"
-  },
-  "os": [
-    "darwin",
-    "linux",
-    "freebsd",
-    "win32"
-  ],
-  "dependencies": {
-    "bindings": "^1.5.0",
-    "debug": "^4.3.2",
-    "napi-thread-safe-callback": "0.0.6",
-    "node-addon-api": "^4.2.0"
-  },
-  "devDependencies": {
-    "@mapbox/node-pre-gyp": "^1.0.5",
-    "@mathquis/node-pre-gyp-github": "^1.0.1",
-    "async": "^3.2.0",
-    "eslint": "^7.27.0",
-    "eslint-config-semistandard": "^15.0.1",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.23.3",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-standard": "^5.0.0",
-    "install": "^0.13.0",
-    "mocha": "^8.4.0",
-    "node-gyp": "^8.4.0",
-    "prettier": "^2.3.0",
-    "proxyquire": "^2.1.3",
-    "request": "^2.88.2",
-    "should": "~13.2.3",
-    "sinon": "~11.1.1",
-    "tar": "^6.1.0",
-    "ws": "^7.4.6"
-  },
-  "optionalDependencies": {
-    "cmsn-bluetooth-hci-socket": "0.6.2"
-  },
-  "scripts": {
-    "build": "node-gyp configure && node-gyp build",
-    "build-win": "node-gyp build",
-    "clean-prebuilt": "node-pre-gyp clean",
-    "package-prebuilt": "node-pre-gyp package",
-    "pack-all": "node scripts/pack-all.js",
-    "fetch-prebuilt": "node-pre-gyp install --fallback-to-build=false",
-    "install": "npm run fetch-prebuilt || npm run build",
-    "lint": "eslint \"**/*.js\"",
-    "lint-fix": "eslint \"**/*.js\" --fix",
-    "test": "mocha -R spec test/*.js"
-  },
-  "browser": {
-    "./lib/resolve-bindings.js": "./lib/resolve-bindings-web.js"
-  }
+    "author": "Sandeep Mistry",
+    "maintainers": [
+        "Jacob Rosenthal", "Luis Montes"
+    ],
+    "license": "MIT",
+    "name": "cmsn-noble",
+    "description": "A Node.js BLE (Bluetooth Low Energy) central library.",
+    "version": "3.2.0",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Yongle-Fu/noble.git"
+    },
+    "binary": {
+        "module_name": "noble",
+        "module_path": "./build/Release",
+        "host": "https://focus-resource.oss-cn-beijing.aliyuncs.com/universal/node-prebuild/{module_name}/",
+        "remote_path": "v{version}"
+    },
+    "keywords": [
+        "bluetooth",
+        "BLE",
+        "bluetooth low energy",
+        "bluetooth smart",
+        "central",
+        "winrt ble",
+        "node-ble",
+        "noble"
+    ],
+    "main": "./index.js",
+    "types": "./index.d.ts",
+    "os": [
+        "darwin", "linux", "freebsd", "win32"
+    ],
+    "dependencies": {
+        "bindings": "^1.6.0",
+        "debug": "^4.3.2",
+        "napi-thread-safe-callback": "0.0.6",
+        "node-addon-api": "^6.1.0",
+        "node-gyp-build": "^4.6.0"
+    },
+    "devDependencies": {
+        "async": "^3.2.0",
+        "eslint": "^7.27.0",
+        "eslint-config-semistandard": "^15.0.1",
+        "eslint-config-standard": "^16.0.3",
+        "eslint-plugin-import": "^2.23.3",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^5.1.0",
+        "eslint-plugin-standard": "^5.0.0",
+        "install": "^0.13.0",
+        "mocha": "^8.4.0",
+        "prettier": "^2.3.0",
+        "proxyquire": "^2.1.3",
+        "request": "^2.88.2",
+        "should": "~13.2.3",
+        "sinon": "~11.1.1",
+        "tar": "^6.1.0",
+        "ws": "^7.4.6"
+    },
+    "gypfile": true,
+    "scripts": {
+        "install": "node-gyp-build",
+        "lint": "eslint \"**/*.js\"",
+        "lint-fix": "eslint \"**/*.js\" --fix",
+        "test": "mocha -R spec test/*.js"
+    },
+    "browser": {
+        "./lib/resolve-bindings.js": "./lib/resolve-bindings-web.js"
+    }
 }
