--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "name": "cmsn-noble",
   "description": "A Node.js BLE (Bluetooth Low Energy) central library.",
-  "version": "3.1.6",
+  "version": "3.1.7",
   "repository": {
     "type": "git",
     "url": "https://github.com/Yongle-Fu/noble.git"
@@ -41,6 +41,7 @@
   ],
   "dependencies": {
     "bindings": "^1.5.0",
+    "buffer": "^6.0.3",
     "debug": "^4.3.2",
     "napi-thread-safe-callback": "0.0.6",
     "node-addon-api": "^4.2.0"
