feat: sync with Release 1.9.2-23

--- a/.gitignore
+++ b/.gitignore
@@ -6,10 +6,12 @@ lib-cov
 *.out
 *.pid
 *.gz
+.nyc_output
 
 pids
 logs
 results
+coverage
 
 build/
 node_modules/
@@ -18,4 +20,5 @@ npm-debug.log
 lib/mac/native
 
 .vscode/
+.idea/
 package-lock.json
