--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,11 @@
 loglevel=verbose
+
 # registry=https://npm.taobao.org
-# disturl=https://npm.taobao.org/dist
 registry=https://registry.npmjs.org
+
+# disturl=https://npm.taobao.org/dist
+dist-url=https://nodejs.org/dist/
+
 # registry.npmjs.org/:_authToken=${NPM_TOKEN}
 
 # proxy=null#http://127.0.0.1:1087
